--- a/task-24/index.css
+++ b/task-24/index.css
@@ -1,33 +1,44 @@
+body{
+    margin:0;
+}
 table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        th, td {
-            border: 1px solid black;
-            padding: 10px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-.pagination-container{
-display: flex;
-justify-content: center;
-margin: 0 auto;
-
+    width: 100%;
+    border-collapse: collapse;
 }
-.pagination-btn{
-   cursor: pointer;
-   width: 40px;
-   height: 40px;
-   font-size: 20px;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   border:1px solid rgb(255, 201, 255);
-   background-color:azure;
+
+th,
+td {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: left;
 }
-.active{
-   background-color:rgb(25, 0, 0);
-   color:white;
+
+th {
+    
+    background-color: #005903; /* Цвет фона */
+    color: white; /* Цвет текста */
+    cursor: pointer; /* Изменение курсора при наведении */
+    padding: 12px 20px; /* Отступы внутри ячейки */
+    border: 1px solid gray; /* Убираем границу */
+    text-align: center; /* Выравнивание текста */
+    text-decoration: underline; /* Подчеркивание текста */
 }
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    margin: 30px auto 30px;
+}
+.pagination-btn {
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    border: 1px solid rgb(255, 201, 255);
+    background-color: azure;
+}
+.active {
+    background-color: rgb(25, 0, 0);
+    color: white;
+}
+
